--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "format": "prettier --write src/**/*.tsx"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.0.1",
     "@phosphor-icons/react": "^2.0.6",
     "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-router-dom": "^6.9.0",
-    "swiper": "^9.2.0"
+    "react-toastify": "^9.1.2",
+    "swiper": "^9.2.0",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
