--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.9.0",
     "react-toastify": "^9.1.2",
     "swiper": "^9.2.0",
+    "tailwindcss-box-shadow": "^2.0.1",
     "yup": "^1.0.2"
   },
   "devDependencies": {
