--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@phosphor-icons/react": "^2.0.6",
     "axios": "^1.3.4",
     "jwt-decode": "^3.1.2",
+    "nookies": "^2.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
